--- a/components/inline-example/inline-example.less
+++ b/components/inline-example/inline-example.less
@@ -13,7 +13,7 @@
   .txn;
   font-style: italic;
 
-  b, em, .em, .emphasis {
+  b, em, .em, .emphasis, strong {
     .em;
   }
 
